css/style.css
/* Google Font */
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Roboto:wght@400;500;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
:root {
  --primary-font-family: "Roboto", sans-serif;
  --secondary-font-family: "Montserrat", sans-serif;
  --btn-bg-color: #59a5ff;
  --btn-text-color: white;
  --medium-font: 22px;
  --normal-font: 18px;
}
body {
  font-family: var(--primary-font-family);
  background: #efefef;
}
.btn-primary {
  background-color: var(--btn-bg-color);
  color: var(--btn-text-color);
  border-radius: 3px;
  padding: 5px 20px;
  font-weight: 700;
  border: none;
  cursor: pointer;
}

.container {
  /* background: #59a5ff; */
  /* height: 100vh; */
  width: 90%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.main-body {
  background: #e4e4e4;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  margin-bottom: 30px;
  box-shadow: 1px 5px 5px 1px rgba(0, 0, 0, 0.5);
}
header {
  color: #1c658c;
  margin: 10px 0;
}

.left-side {
  background-image: url("../image/money-calculation.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

.right-side {
  display: grid;
  grid-template-columns: 1fr;
  justify-items: center;
  padding: 20px;
}
.cal-button {
  display: flex;
  justify-content: center;
}
.form-control {
  margin: 10px 0;
}
.form-input {
  border: none;
  outline: none;
  padding: 3px 5px;
  width: 70%;
}
#save-input {
  width: 50%;
}
h4 {
  text-align: center;
  margin: 15px 0;
}

